--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,7 +14,7 @@ jobs:
     - run: yarn
     - run: |
         git config --global user.email "williams.e.christian@gmail.com"
-        git config --global user.name "cwmoon"
+        git config --global user.name "authorcwmoon"
     - run: yarn deploy:prod
       env:
         CI: true
