--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,7 +15,7 @@ jobs:
     - run: |
         git config --global user.email "williams.e.christian@gmail.com"
         git config --global user.name "authorcwmoon"
-    - run: yarn deploy:prod
+    - run: yarn deploy
       env:
         CI: true
         PA_TOKEN: ${{ secrets.PA_TOKEN }}
