--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-styled-components": "^3.3.12",
+    "gatsby-remark-images": "^3.3.32",
     "gatsby-source-filesystem": "^2.3.32",
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.0"
   },
+  "react": "^15.3.1",
   "devDependencies": {
     "gh-pages": "^3.1.0",
     "prettier": "2.1.1"
