--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
     "@mdx-js/mdx": "^1.6.18",
     "@mdx-js/react": "^1.6.18",
     "babel-plugin-styled-components": "^1.11.1",
+    "emotion-theming": "^10.0.27",
+    "fathom-client": "^3.0.0",
     "fs": "0.0.1-security",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.20",
