--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-filesystem": "^2.3.32",
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
+    "isomorphic-unfetch": "^3.1.0",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.1.1",
     "prop-types": "^15.7.2",
