--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/mdx": "^1.6.18",
     "@mdx-js/react": "^1.6.18",
     "babel-plugin-styled-components": "^1.11.1",
+    "babel-plugin-styled-componpnts": "^1.11.1",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
     "fathom-client": "^3.0.0",
@@ -30,7 +31,6 @@
     "isomorphic-unfetch": "^3.1.0",
     "mdx-utils": "^0.2.0",
     "netlify-cli": "^2.65.1",
-    "node-fetch": "^2.6.1",
     "prism-react-renderer": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
