--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "@mdx-js/mdx": "^1.6.18",
     "@mdx-js/react": "^1.6.18",
     "babel-plugin-styled-components": "^1.11.1",
@@ -16,6 +18,7 @@
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-catch-links": "^2.3.12",
+    "gatsby-plugin-chakra-ui": "^0.1.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-mdx": "^1.2.43",
